# stillwater

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  EXAMPLES_README.md  IMPLEMENTATION_PLAN.md  Justfile  LICENSE  PHILOSOPHY.md  README.md  deny.toml  rust-toolchain.toml
.claude/commands/: prodigy-add-spec.md  prodigy-ai-analyze-chapter-semantics.md  prodigy-ai-organize-chapter.md  prodigy-analyze-book-chapter-drift.md  prodigy-analyze-book-consistency.md  prodigy-analyze-chapter-structure.md  prodigy-analyze-doc-section-drift.md  prodigy-analyze-features-for-book.md  prodigy-analyze-features-for-mkdocs.md  prodigy-analyze-mkdocs-drift.md  prodigy-analyze-mkdocs-structure.md  prodigy-analyze-subsection-drift.md  prodigy-analyze-workflow-features.md  prodigy-auto-organize-chapters.md  prodigy-ci.md  (+55 more)
.github/: SECURITY.md  dependabot.yml
docs/: COMPARISON.md  FAQ.md  MIGRATION.md  PATTERNS.md  async-design.md  improving-our-process.md  io-api-analysis.md  validation-api-comparison.md
examples/: boxing_decisions.rs  comparison_doc.rs  data_pipeline.rs  effects.rs  error_context.rs  extended_semigroup.rs  form_validation.rs  homogeneous_validation.rs  io_patterns.rs  monoid.rs  nonempty.rs  parallel_effects.rs  pipeline.rs  predicates.rs  reader_pattern.rs  recover_patterns.rs  refined.rs  resource_scopes.rs  resource_tracking.rs  retry_patterns.rs  sink_streaming.rs  testing_patterns.rs  tracing_demo.rs  traverse.rs  user_registration.rs  validation.rs  writer_logging.rs
proptest-regressions/: monoid.txt
specs/: 001-retry-resilience.md  001-semigroup-trait.md  002-resource-scopes.md  002-validation-type.md  003-effect-type-core.md  003-saga-compensation.md  004-context-error-handling.md  005-io-module.md  006-helper-combinators.md  007-try-trait-integration.md  008-project-structure-setup.md  009-compiled-examples.md  010-documentation-structure.md  011-monoid-trait.md  012-reader-helpers.md  013-nonempty-vec.md  014-extended-semigroup-impls.md  015-parallel-effects.md  016-traverse-utilities.md  017-serde-integration.md  018-testing-utilities.md  019-framework-integration.md  020-benchmark-suite.md  021-homogeneous-combining-validation.md  022-run-standalone-ergonomics.md  023-effect-debugging-observability.md  024-zero-cost-effect-trait.md  025-documentation-update-zero-cost.md  026-either-type.md  027-effect-zip-combinators.md  028-predicate-combinators.md  029-ensure-filter-combinators.md  030-result-extension-trait.md  031-effect-do-notation-macro.md  032-bracket-resource-macro.md  033-effect-module-consolidation.md  033-scoped-combined-macro.md  034-effect-with-flat-tuple-combinators.md  035-comparison-documentation-enhancement.md  035-enhanced-validation-assertions.md  (+14 more)
src/: context.rs  effect.rs  either.rs  io.rs  lib.rs  monoid.rs  nonempty.rs  semigroup.rs  testing.rs  traverse.rs  validation.rs
tests/: bracket_integration.rs  helper_combinators_integration.rs  homogeneous_integration.rs  homogeneous_properties.proptest-regressions  homogeneous_properties.rs  testing_utilities.rs  try_trait.rs
workflows/: implement.yml
(+148 files in other folders)
