[package]
name = "stillwater"
version = "0.4.0"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
license = "MIT"
description = "Pragmatic effect composition and validation for Rust - pure core, imperative shell"
repository = "https://github.com/iepathos/stillwater"
keywords = ["validation", "effects", "functional", "composition", "railway"]
categories = ["rust-patterns", "data-structures"]
readme = "README.md"

[dependencies]
# Optional async support
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
proptest = "1.0"

[features]
default = []
async = ["tokio"]
try_trait = []

[[example]]
name = "validation"
path = "examples/validation.rs"

[[example]]
name = "effects"
path = "examples/effects.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline.rs"
