[package]
name = "stillwater"
version = "0.12.0"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
license = "MIT"
description = "Pragmatic effect composition and validation for Rust - pure core, imperative shell"
repository = "https://github.com/iepathos/stillwater"
keywords = ["validation", "effects", "functional", "composition", "railway"]
categories = ["rust-patterns", "data-structures"]
readme = "README.md"

[dependencies]
# Optional async support
tokio = { version = "1", features = ["full"], optional = true }
futures = "0.3"
proptest = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
proptest = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-test = "0.2"

[features]
default = []
async = ["tokio"]
try_trait = []
proptest = ["dep:proptest"]
jitter = ["dep:rand"]
tracing = ["dep:tracing"]

[[example]]
name = "recover_patterns"
required-features = ["async"]

[[example]]
name = "retry_patterns"
required-features = ["async"]

[[example]]
name = "tracing_demo"
required-features = ["tracing", "async"]

[[example]]
name = "comparison_doc"
required-features = ["async"]

